--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<main class="w-screen h-screen text-xs lg:text-base">
+<main class="w-screen h-screen text-xs lg:text-sm">
   <app-home></app-home>
 </main>
