--- a/src/app/components/home/sidebar/sidebar.component.html
+++ b/src/app/components/home/sidebar/sidebar.component.html
@@ -1,16 +1,16 @@
 <div
   #divRef
-  class="fixed w-0 h-full bg-[#00000041]"
+  class="fixed w-0 h-full bg-[#00000041] shadow-xl"
   [ngClass]="{ aside: open }"
   [appClickOutside]="divRef"
   (close)="onClose()"
 >
   <aside
     [ngClass]="{ sidebar: open }"
-    class="w-0 h-full bg-white flex flex-col transition-all overflow-clip"
+    class="w-0 h-full bg-white flex flex-col transition-all overflow-x-hidden overflow-y-auto"
   >
     <div
-      class="p-4 flex flex-col flex-shrink-0 items-start w-full gap-4 border-b border-[#AAAAAA]"
+      class="p-4 flex flex-col flex-shrink-0 items-start w-[250px] gap-4 border-b border-[#AAAAAA]"
     >
       <span class="w-[3rem] h-[3rem] bg-black rounded-full"></span>
       <div class="flex flex-row flex-shrink-0 w-full items-center">
@@ -29,7 +29,7 @@
 
     <div
       [ngClass]="{ hide: hide }"
-      class="flex flex-col h-0 overflow-hidden w-full transition-all"
+      class="flex flex-col h-0 overflow-hidden w-[250px] flex-shrink-0 transition-all"
     >
       <button class="flex flex-row items-center gap-2 p-2 hover:bg-[#F1F1F1]">
         <span class="w-[2rem] h-[2rem] bg-black rounded-full"></span>
@@ -47,7 +47,7 @@
       </button>
     </div>
 
-    <div class="flex flex-col w-full py-2 overflow-y-auto h-full">
+    <div class="flex flex-col w-[250px] flex-shrink-0 py-2 flex-grow">
       <button
         *ngFor="let button of buttons"
         class="flex flex-row items-center gap-2 p-2 hover:bg-[#F1F1F1]"
@@ -60,7 +60,7 @@
         </span>
         <p class="font-medium">{{ button.title }}</p>
       </button>
-      <span class="flex flex-col mt-auto p-2 text-[#AB9999]">
+      <span class="flex flex-col p-2 mt-auto text-[#AB9999]">
         <p>Telegram Desktop Clone</p>
         <p>Version 1.0.0 x64 - Overhaul</p>
       </span>
