--- a/src/app/components/home/sidebar/sidebar.component.html
+++ b/src/app/components/home/sidebar/sidebar.component.html
@@ -12,7 +12,13 @@
     <div
       class="p-4 flex flex-col flex-shrink-0 items-start w-[250px] gap-4 border-b border-[#AAAAAA]"
     >
-      <span class="w-[3rem] h-[3rem] bg-black rounded-full"></span>
+      <span class="w-[3rem] h-[3rem] overflow-hidden rounded-full">
+        <img
+          alt=""
+          src="../../../../assets/joyboy.jpg"
+          class="w-full h-full object-cover"
+        />
+      </span>
       <div class="flex flex-row flex-shrink-0 w-full items-center">
         <span class="flex flex-col flex-grow">
           <p class="font-medium">Maltiti</p>
