--- a/src/app/components/home/chat-area/chat-area.component.html
+++ b/src/app/components/home/chat-area/chat-area.component.html
@@ -16,10 +16,11 @@
       <span
         class="h-[2.5rem] w-[2.5rem] lg:hidden rounded-full bg-sky-400 grid"
       >
-        <span
-          class="iconify m-auto text-white text-xl font-bold"
-          data-icon="bi:bookmark"
-        ></span>
+        <img
+          alt=""
+          src="../../../../assets/joyboy.jpg"
+          class="w-full h-full object-cover"
+        />
       </span>
       <p>{{ chatData.chatWith }}</p>
     </span>
@@ -29,10 +30,17 @@
     </span>
   </nav>
 
-  <section class="flex flex-grow overflow-y-auto p-2 bg-red-200">
+  <section
+    class="flex flex-grow flex-col overflow-y-auto p-2 relative bg-red-200"
+  >
+    <img
+      alt=""
+      src="../../../../assets/bg.jpg"
+      class="object-cover top-0 left-0 w-full h-full absolute"
+    />
     <div *ngFor="let chat of chatData.data" class="w-full flex flex-col gap-2">
       <div
-        class="w-fit bg-[#00000036] text-white py-1 px-4 rounded-full mx-auto"
+        class="w-fit bg-[#00000036] text-white py-1 px-4 rounded-full mx-auto lg:mx-0 lg:ml-[25%] z-10"
       >
         {{ chat.date | date }}
       </div>
@@ -44,7 +52,10 @@
     </div>
   </section>
 
-  <footer class="sticky bottom-0 flex flex-row items-end p-2 gap-3">
+  <form
+    #formRef="ngForm"
+    class="absolute bg-white w-full bottom-0 flex flex-row items-end p-2 gap-3"
+  >
     <span
       class="iconify text-2xl text-[#9C9C9C]"
       data-icon="iconoir:attachment"
@@ -52,6 +63,10 @@
     ></span>
     <textarea
       type="text"
+      name="message"
+      [(ngModel)]="message"
+      minlength="1"
+      #textAreaRef="ngModel"
       placeholder="Write a message..."
       class="flex-grow text-sm focus:outline-none resize-none h-[1.5rem]"
       oninput='this.style.height = ""; this.style.height = this.scrollHeight + "px"'
@@ -61,18 +76,33 @@
         class="iconify text-3xl text-[#9C9C9C]"
         data-icon="fluent:emoji-16-regular"
       ></span>
-      <span
-        class="iconify text-2xl text-[#9C9C9C]"
-        data-icon="fluent:mic-32-regular"
-      ></span>
+      <div *ngIf="message === ''; else send">
+        <span
+          class="iconify text-2xl text-[#9C9C9C]"
+          data-icon="fluent:mic-32-regular"
+        ></span>
+      </div>
+      <ng-template #send>
+        <div>
+          <span
+            class="iconify text-2xl text-[#9C9C9C]"
+            data-icon="fluent:send-24-filled"
+          ></span>
+        </div>
+      </ng-template>
     </span>
-  </footer>
+  </form>
 </main>
 <ng-template #nochat>
   <main
     class="-right-[100vw] lg:-right-0 fixed lg:relative w-full h-full grid transition-all overflow-hidden bg-red-200"
   >
-    <p class="text-white py-1 px-4 rounded-full m-auto bg-[#00000046]">
+    <img
+      alt=""
+      src="../../../../assets/bg.jpg"
+      class="object-cover top-0 left-0 w-full h-full absolute"
+    />
+    <p class="text-white py-1 px-4 rounded-full m-auto bg-[#00000046] z-10">
       Select a chat to start messaging
     </p>
   </main>
