--- a/src/app/components/home/chat-card/chat-card.component.html
+++ b/src/app/components/home/chat-card/chat-card.component.html
@@ -2,7 +2,7 @@
   class="w-full flex flex-row p-2 hover:bg-[#F1F1F1]"
   (click)="onOpenChat()"
   [appHighlight]="'#419FD9'"
-  [chat]="chat"
+  [chat]="storeChat"
 >
   <span
     class="w-[3rem] h-[3rem] bg-gray-300 flex-shrink-0 rounded-full overflow-hidden"
@@ -17,18 +17,18 @@
       <p
         [appHighlight]="''"
         [text-color]="'white'"
-        [chat]="chat"
+        [chat]="storeChat"
         class="font-medium"
       >
-        {{ chat.name }}
+        {{ user.fullname }}
       </p>
       <p
         [appHighlight]="''"
         [text-color]="'white'"
-        [chat]="chat"
+        [chat]="storeChat"
         class="text-gray-400"
       >
-        {{ chat.createdAt | date: "shortTime" }}
+        10:00AM
       </p>
     </div>
 
@@ -37,15 +37,15 @@
         class="whitespace-nowrap text-ellipsis overflow-hidden max-w-[30ch] text-gray-400"
         [appHighlight]="''"
         [text-color]="'white'"
-        [chat]="chat"
+        [chat]="storeChat"
       >
-        {{ chat.last_message }}
+        some random ass text
       </p>
       <p
         class="bg-gray-400 w-5 h-5 rounded-full text-center leading-5 text-white font-medium text-xs"
         [appHighlight]="'white'"
         [text-color]="'#419FD9'"
-        [chat]="chat"
+        [chat]="storeChat"
       >
         2
       </p>
