--- a/src/app/components/home/sidebar/sidebar.component.html
+++ b/src/app/components/home/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div
   #divRef
-  class="fixed w-0 h-full bg-[#00000041] shadow-xl"
+  class="fixed w-0 h-full bg-[#00000041] shadow-xl z-20"
   [ngClass]="{ aside: open }"
   [appClickOutside]="divRef"
   (close)="onClose()"
