--- a/src/app/components/home/chat-area/chat-bubble/chat-bubble.component.html
+++ b/src/app/components/home/chat-area/chat-bubble/chat-bubble.component.html
@@ -1,17 +1,17 @@
 <div
-  [ngClass]="{ 'push-to-right': data.from === '1' }"
+  [ngClass]="{ 'push-to-right': thisUser === data.from }"
   class="w-fit min-w-[10rem] max-w-[20rem] min-h-[2rem] flex flex-col text-black bg-white relative rounded-md px-2 py-1 gap-2 flex-shrink-0 lg:ml-10"
 >
   <span class="flex-grow font-medium text-sm my-auto">{{ data.message }}</span>
   <span class="flex flex-row h-full flex-shrink-0 items-end ml-auto">
     <p
-      [ngClass]="{ 'color-right': data.from !== '1' }"
+      [ngClass]="{ 'color-right': thisUser !== data.from }"
       class="mb-[0.1rem] text-[#9BCD7C] text-xs"
     >
       {{ data.time | date: "shortTime" }}
     </p>
     <span
-      *ngIf="data.from === '1'"
+      *ngIf="thisUser === data.from"
       class="iconify text-lg mt-auto text-[#9BCD7C]"
       data-icon="bi:check-all"
     ></span>
