feat: chat feature with sockets

--- a/src/app/components/home/chat-area/chat-area.component.html
+++ b/src/app/components/home/chat-area/chat-area.component.html
@@ -43,9 +43,9 @@
         class="w-full flex flex-col gap-2 mb-2"
       >
         <div
-          class="w-fit bg-[#00000036] text-white py-1 px-4 rounded-full mx-auto lg:mx-0 lg:ml-[25%] z-10"
+          class="w-fit bg-[#00000036] text-white py-1 px-4 rounded-full mx-auto mt-2 lg:mx-0 lg:ml-[25%] z-10"
         >
-          {{ chat.date | date }}
+          {{ chat.date | pipedate }}
         </div>
         <app-chat-bubble
           *ngFor="let message of chat.messages"
@@ -56,7 +56,7 @@
     </span>
   </section>
 
-  <form
+  <footer
     class="bg-white z-10 w-full flex flex-row items-end p-2 gap-3 flex-shrink-0"
   >
     <span
@@ -88,13 +88,13 @@
       <ng-template #send>
         <button (click)="onSubmit()">
           <span
-            class="iconify text-2xl text-[#9C9C9C]"
+            class="iconify text-2xl text-[#419FD9]"
             data-icon="fluent:send-24-filled"
           ></span>
         </button>
       </ng-template>
     </span>
-  </form>
+  </footer>
 </main>
 <ng-template #nochat>
   <main
