--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,5 +32,6 @@
     class="flex-grow"
     [open]="openChat"
     (close)="toggleChat()"
+    (updateChat)="onUpdateChat()"
   ></app-chat-area>
 </main>
