--- a/src/app/components/home/chat-area/chat-bubble/chat-bubble.component.html
+++ b/src/app/components/home/chat-area/chat-bubble/chat-bubble.component.html
@@ -17,6 +17,8 @@
     ></span>
   </span>
   <span
-    class="hidden lg:flex absolute w-[2rem] h-[2rem] rounded-full bg-white z-10 mt-auto mr-1 -left-10 bottom-0"
-  ></span>
+    class="hidden lg:flex absolute w-[2rem] h-[2rem] overflow-hidden rounded-full z-10 mt-auto mr-1 -left-10 bottom-0"
+  >
+    <img alt="" [src]="url + refereePfp" class="w-full h-full object-cover"
+  /></span>
 </div>
