--- a/src/app/components/home/chat-card/chat-card.component.html
+++ b/src/app/components/home/chat-card/chat-card.component.html
@@ -7,10 +7,7 @@
   <span
     class="w-[3rem] h-[3rem] bg-gray-300 flex-shrink-0 rounded-full overflow-hidden"
   >
-    <img
-      src="../../../../assets/joyboy.jpg"
-      class="w-full h-full object-cover"
-    />
+    <img alt="" [src]="url + user.profile" class="w-full h-full object-cover" />
   </span>
   <div class="flex flex-col justify-between w-full h-[3rem] ml-3">
     <div class="w-full flex flex-row justify-between text-sm">
