feat: last message

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
 >
   <aside
     [ngClass]="{ sidebar: open }"
-    class="w-0 h-full bg-white flex flex-col transition-all overflow-x-hidden overflow-y-auto"
+    class="w-0 h-full bg-white flex flex-col transition-all overflow-x-hidden overflow-y-auto scrollbar-none"
   >
     <div
       class="p-4 flex flex-col flex-shrink-0 items-start w-[250px] gap-4 border-b border-[#AAAAAA]"
