minor commits: last message

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -50,5 +50,12 @@
     >
       Next
     </button>
+    <button
+      type="button"
+      [routerLink]="'signup'"
+      class="text-[#6A52DA] italic underline"
+    >
+      Register here
+    </button>
   </form>
 </main>
